# meowtrix-sdk

./: .gitignore  Makefile  README.md  pyproject.toml
src/meowtrix/sdk/: bot.py  listener.py  middleware.py  router.py
src/meowtrix/sdk/filters/: __init__.py  base_filter.py  command.py
src/meowtrix/sdk/types/: __init__.py
src/meowtrix/sdk/types/events/: __init__.py  base_event.py  message.py  relations.py
src/meowtrix/sdk/utils/: connection.py  storage.py
