[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meowtrix-sdk"
version = "0.1.0"
description = "Python library for writing Matrix bots"
readme = "README.md"
license = "LGPL-2.1"
requires-python = ">=3.11"
authors = [
    { name = "d2rkmean", email = "artyom_darkmean@hotmail.com" },
]
keywords = ["matrix", "e2ee", "olm", "megolm", "vodozemac", "chat", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiosqlite>=0.22.1",
    "httpx>=0.27,<1.0",
    "vodozemac>=0.8.1",
]

[project.urls]
Homepage = "https://github.com/d2rkmean/meowtrix-sdk"
Repository = "https://github.com/d2rkmean/meowtrix-sdk"
Issues = "https://github.com/d2rkmean/meowtrix-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/meowtrix"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
